--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "interview-exercises",
+  "name": "technical-interviews-js-exercises",
   "version": "1.0.0",
   "license": "MIT",
   "devDependencies": {
