--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "technical-interviews-js-exercises",
   "version": "1.0.0",
   "license": "MIT",
+  "scripts": {
+    "lint": "eslint --ext \".js\" --ignore-path .gitignore .",
+    "lint:fix": "eslint --ext \".js\" --ignore-path .gitignore ."
+  },
   "devDependencies": {
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
